tdf#130845 sidebar widget visible when sidebar collapsed

default to "false" and track the parent widget clipping/visibility
instead of "true" which makes it unconditionally visible

Change-Id: I1f8cec2b07ac20c33ff09cc278424d7e20199946
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/89552
Tested-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>